Add local docker registry support
Create a set of environment variables that allows us to configure
a docker registry for deployment.  This patch assumes there is a
local docker registry already setup with the images loaded in place.

Change-Id: Iaafaf23eb3fa8b24bcd8f73bb38c552bea629607
Signed-off-by: Ian Main <imain@redhat.com>
Co-Authored-By: Ryan Hallisey <rhallise@redhat.com>

--- a/docker/compute-post.yaml
+++ b/docker/compute-post.yaml
@@ -9,6 +9,9 @@ parameters:
   NodeConfigIdentifiers:
      type: json
      description: Value which changes if the node configuration may need to be re-applied
+  DockerNamespace:
+    type: string
+    default: kollaglue
   DockerComputeImage:
     type: string
   DockerComputeDataImage:
@@ -95,7 +98,10 @@ resources:
       group: docker-compose
       config:
         ovsvswitchd:
-          image: {get_param: DockerOvsVswitchdImage}
+          image:
+            list_join:
+            - '/'
+            - [ {get_param: DockerNamespace}, {get_param: DockerOvsVswitchdImage} ]
           container_name: ovs-vswitchd
           net: host
           privileged: true
@@ -108,7 +114,10 @@ resources:
            - KOLLA_CONFIG_STRATEGY=COPY_ALWAYS
 
         openvswitchdb:
-          image: {get_param: DockerOpenvswitchDBImage}
+          image:
+            list_join:
+            - '/'
+            - [ {get_param: DockerNamespace}, {get_param: DockerOpenvswitchDBImage} ]
           container_name: ovs-db-server
           net: host
           restart: always
@@ -151,14 +160,20 @@ resources:
       group: docker-compose
       config:
         computedata:
-          image: {get_param: DockerComputeDataImage}
+          image:
+            list_join:
+            - '/'
+            - [ {get_param: DockerNamespace}, {get_param: DockerComputeDataImage} ]
           container_name: computedata
           volumes:
            - /var/lib/nova/instances
            - /var/lib/libvirt
 
         libvirt:
-          image: {get_param: DockerLibvirtImage}
+          image:
+            list_join:
+            - '/'
+            - [ {get_param: DockerNamespace}, {get_param: DockerLibvirtImage} ]
           container_name: libvirt
           net: host
           pid: host
@@ -187,7 +202,10 @@ resources:
       group: docker-compose
       config:
         openvswitch:
-          image: {get_param: DockerOpenvswitchImage}
+          image:
+            list_join:
+            - '/'
+            - [ {get_param: DockerNamespace}, {get_param: DockerOpenvswitchImage} ]
           container_name: openvswitch
           net: host
           privileged: true
@@ -205,7 +223,10 @@ resources:
            - computedata
 
         neutronagent:
-          image: {get_param: DockerOpenvswitchImage}
+          image:
+            list_join:
+            - '/'
+            - [ {get_param: DockerNamespace}, {get_param: DockerOpenvswitchImage} ]
           container_name: neutronagent
           net: host
           pid: host
@@ -223,7 +244,10 @@ resources:
            - computedata
 
         novacompute:
-          image: {get_param: DockerComputeImage}
+          image:
+            list_join:
+            - '/'
+            - [ {get_param: DockerNamespace}, {get_param: DockerComputeImage} ]
           container_name: novacompute
           net: host
           privileged: true
