--- a/docker/firstboot/install_docker_agents.yaml
+++ b/docker/firstboot/install_docker_agents.yaml
@@ -4,6 +4,12 @@ parameters:
   DockerAgentImage:
     type: string
     default: dprince/heat-docker-agents-centos
+  DockerNamespace:
+    type: string
+    default: kollaglue
+  DockerNamespaceIsRegistry:
+    type: boolean
+    default: false
 
 resources:
 
@@ -21,6 +27,8 @@ resources:
         str_replace:
           params:
             $agent_image: {get_param: DockerAgentImage}
+            $docker_registry: {get_param: DockerNamespace}
+            $docker_namespace_is_registry: {get_param: DockerNamespaceIsRegistry}
           template: {get_file: ./start_docker_agents.sh}
 
 outputs:
