--- a/environments/docker-rdo.yaml
+++ b/environments/docker-rdo.yaml
@@ -9,10 +9,16 @@ parameters:
 
 # FIXME: When Kolla cuts liberty tag we can use kollaglue registry
 parameter_defaults:
-  DockerComputeImage: rthallisey/centos-binary-nova-compute:liberty
-  DockerComputeDataImage: rthallisey/centos-binary-data:liberty
-  DockerLibvirtImage: rthallisey/centos-binary-nova-libvirt:liberty
-  DockerNeutronAgentImage: rthallisey/centos-binary-neutron-agents:liberty
-  DockerOpenvswitchImage: rthallisey/centos-binary-neutron-openvswitch-agent:liberty
-  DockerOvsVswitchdImage: rthallisey/centos-binary-openvswitch-vswitchd:liberty
-  DockerOpenvswitchDBImage: rthallisey/centos-binary-openvswitch-db-server:liberty
+  # Defaults to kollaglue.  Specify a local docker registry
+  # Example: 192.168.122.131:8787
+  DockerNamespace: kollaglue
+  # Enable local Docker registry
+  DockerNamespaceIsRegistry: false
+  # Compute Node Images
+  DockerComputeImage: centos-binary-nova-compute:liberty
+  DockerComputeDataImage: centos-binary-data:liberty
+  DockerLibvirtImage: centos-binary-nova-libvirt:liberty
+  DockerNeutronAgentImage: centos-binary-neutron-agents:liberty
+  DockerOpenvswitchImage: centos-binary-neutron-openvswitch-agent:liberty
+  DockerOvsVswitchdImage: centos-binary-openvswitch-vswitchd:liberty
+  DockerOpenvswitchDBImage: centos-binary-openvswitch-db-server:liberty
