Implement Neutron enable_isolated_metadata parameters
* Use the parameter in Puppet configuration (Hiera) to configure neutron

BZ-1273303

Change-Id: Ic5a7a1f13fd2bc800cadc3a78b1daadbc0394787
Signed-off-by: Cyril Lopez <cylopez@redhat.com>
(cherry picked from commit 987174c7b4514d08a61505997ddb1a6ccbda77de)
Conflicts:
	os-apply-config/controller.yaml
	puppet/controller.yaml

--- a/os-apply-config/controller.yaml
+++ b/os-apply-config/controller.yaml
@@ -355,6 +355,10 @@ parameters:
     type: number
     default: 3
     description: The number of neutron dhcp agents to schedule per network
+  NeutronEnableIsolatedMetadata:
+    default: 'False'
+    description: If True, DHCP provide metadata route to VM.
+    type: string
   NeutronEnableTunnelling:
     type: string
     default: "True"
@@ -728,6 +732,7 @@ resources:
           allow_automatic_l3agent_failover: {get_input: neutron_allow_l3agent_failover}
           l3_ha: {get_input: neutron_l3_ha}
           dhcp_agents_per_network: {get_input: neutron_dhcp_agents_per_network}
+          enable_isolated_metadata: {get_input: neutron_enable_isolated_metadata}
           ovs:
             enable_tunneling: {get_input: neutron_enable_tunneling}
             l2_population: {get_input: neutron_enable_l2pop}
@@ -891,6 +896,7 @@ resources:
         controller_virtual_ip: {get_param: VirtualIP}
         neutron_enable_tunneling: {get_param: NeutronEnableTunnelling}
         neutron_enable_l2pop: {get_param: NeutronEnableL2Pop}
+        neutron_enable_isolated_metadata: {get_param: NeutronEnableIsolatedMetadata}
         heat.watch_server_url:
           list_join:
             - ''
