Change default bond-mode
The default balance-tcp is causing issues with deployments.
Defaulting to active-backup.

After ~ 100 guests (total) connectivity to each guest would become spotty
(simple pings would fail, then become successful.) In /var/log/messages
we saw :
"overcloud-controller-1 kernel: openvswitch: ovs-system: deferred action
limit reached, drop recirc action"

For more details, refer to this link:
http://openvswitch.org/pipermail/discuss/2015-October/019168.html

Change-Id: Ia0f2592a289e13472b98d97057cd516c5048fe59
(cherry picked from commit 215cf39c709419f018be02b208af10f2bd4c772e)

--- a/network/config/bond-with-vlans/controller.yaml
+++ b/network/config/bond-with-vlans/controller.yaml
@@ -34,10 +34,9 @@ parameters:
     description: IP address/subnet on the management network
     type: string
   BondInterfaceOvsOptions:
-    default: 'bond_mode=balance-tcp lacp=active other-config:lacp-fallback-ab=true'
+    default: 'bond_mode=active-backup'
     description: The ovs_options string for the bond interface. Set things like
                  lacp=active and/or bond_mode=balance-slb using this option.
-                 Default wil attempt LACP, but will fall back to active-backup.
     type: string
   ExternalNetworkVlanID:
     default: 10
