Fix password issue with mysql address for ceilometer
The password was being passed incorrectly to the mysql address used for
ceilometer.

Change-Id: I36d92e199d6d75b58ef8c1b66a2dfbcb7052f948
(cherry picked from commit 291735371f25432e4b75a4e13d5cfb2fd5ffbc86)

--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -1096,7 +1096,9 @@ resources:
         ceilometer_dsn:
           list_join:
             - ''
-            - - 'mysql+pymysql://ceilometer:unset@'
+            - - 'mysql+pymysql://ceilometer:'
+              - {get_param: CeilometerPassword}
+              - '@'
               - {get_param: MysqlVirtualIP}
               - '/ceilometer'
         snmpd_readonly_user_name: {get_param: SnmpdReadonlyUserName}
