Fix password issue with mysql address for ceilometer
The password was being passed incorrectly to the mysql address used for
ceilometer.

Change-Id: I36d92e199d6d75b58ef8c1b66a2dfbcb7052f948

--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -885,7 +885,9 @@ resources:
         ceilometer_dsn:
           list_join:
             - ''
-            - - 'mysql://ceilometer:unset@'
+            - - 'mysql://ceilometer:'
+              - {get_param: CeilometerPassword}
+              - '@'
               - {get_param: MysqlVirtualIP}
               - '/ceilometer'
         snmpd_readonly_user_name: {get_param: SnmpdReadonlyUserName}
