--- a/network/endpoints/endpoint.yaml
+++ b/network/endpoints/endpoint.yaml
@@ -19,6 +19,10 @@ parameters:
     type: string
     default: ''
     description: A suffix attached to the URL
+  CloudName:
+    type: string
+    default: ''
+    description: The DNS name of this cloud. E.g. ci-overcloud.tripleo.org
 
 outputs:
   endpoint:
@@ -31,7 +35,7 @@ outputs:
       host:
         str_replace:
           template: {get_param: [EndpointMap, {get_param: EndpointName }, host]}
-          params: {IP_ADDRESS: {get_param: IP} }
+          params: {IP_ADDRESS: {get_param: IP}, CLOUDNAME: {get_param: CloudName}}
       uri:
         list_join:
           - ''
@@ -39,7 +43,7 @@ outputs:
             - '://'
             - str_replace:
                 template: {get_param: [EndpointMap, {get_param: EndpointName }, host]}
-                params: {IP_ADDRESS: {get_param: IP} }
+                params: {IP_ADDRESS: {get_param: IP}, CLOUDNAME: {get_param: CloudName }}
             - ':'
             - {get_param: [EndpointMap, {get_param: EndpointName }, port] }
             - {get_param: UriSuffix }
@@ -50,6 +54,6 @@ outputs:
             - '://'
             - str_replace:
                 template: {get_param: [EndpointMap, {get_param: EndpointName }, host]}
-                params: {IP_ADDRESS: {get_param: IP} }
+                params: {IP_ADDRESS: {get_param: IP}, CLOUDNAME: {get_param: CloudName} }
             - ':'
             - {get_param: [EndpointMap, {get_param: EndpointName }, port] }
