Introduce domain configuration through parameter
Introduce configuration of the nodes' domains through a parameter.

Change-Id: Ie012f9f2a402b0333bebecb5b59565c26a654297

--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -283,6 +283,12 @@ parameters:
     description: The user password for SNMPd with readonly rights running on all Overcloud nodes
     type: string
     hidden: true
+  CloudDomain:
+    default: 'localdomain'
+    type: string
+    description: >
+      The DNS domain used for the hosts. This should match the dhcp_domain
+      configured in the Undercloud neutron. Defaults to localdomain.
 
   # Controller-specific params
   AdminToken:
@@ -801,6 +807,7 @@ resources:
           CinderEnableIscsiBackend: {get_param: CinderEnableIscsiBackend}
           CinderEnableRbdBackend: {get_param: CinderEnableRbdBackend}
           CloudName: {get_param: CloudName}
+          CloudDomain: {get_param: CloudDomain}
           ControlVirtualInterface: {get_param: ControlVirtualInterface}
           ControllerExtraConfig: {get_param: controllerExtraConfig}
           Debug: {get_param: Debug}
@@ -975,6 +982,7 @@ resources:
               template: {get_param: ComputeHostnameFormat}
               params:
                 '%stackname%': {get_param: 'OS::stack_name'}
+          CloudDomain: {get_param: CloudDomain}
 
   BlockStorage:
     type: OS::Heat::ResourceGroup
@@ -1012,6 +1020,7 @@ resources:
           MysqlVirtualIP: {get_attr: [VipMap, net_ip_map, {get_param: [ServiceNetMap, MysqlNetwork]}]}
           ExtraConfig: {get_param: ExtraConfig}
           BlockStorageExtraConfig: {get_param: BlockStorageExtraConfig}
+          CloudDomain: {get_param: CloudDomain}
 
   ObjectStorage:
     type: OS::Heat::ResourceGroup
@@ -1040,6 +1049,7 @@ resources:
                 '%stackname%': {get_param: 'OS::stack_name'}
           ExtraConfig: {get_param: ExtraConfig}
           ObjectStorageExtraConfig: {get_param: ObjectStorageExtraConfig}
+          CloudDomain: {get_param: CloudDomain}
 
   CephStorage:
     type: OS::Heat::ResourceGroup
@@ -1063,6 +1073,7 @@ resources:
                 '%stackname%': {get_param: 'OS::stack_name'}
           ExtraConfig: {get_param: ExtraConfig}
           CephStorageExtraConfig: {get_param: CephStorageExtraConfig}
+          CloudDomain: {get_param: CloudDomain}
 
   ControllerIpListMap:
     type: OS::TripleO::Network::Ports::NetIpListMap
