--- a/puppet/cinder-storage.yaml
+++ b/puppet/cinder-storage.yaml
@@ -112,6 +112,13 @@ parameters:
     description: >
       Heat action when to apply network configuration changes
     default: ['CREATE']
+  CloudDomain:
+    default: ''
+    type: string
+    description: >
+      The DNS domain used for the hosts. This should match the dhcp_domain
+      configured in the Undercloud neutron. Defaults to localdomain.
+
 
 resources:
   BlockStorage:
@@ -288,9 +295,10 @@ outputs:
   hosts_entry:
     value:
       str_replace:
-        template: "IP HOST.localdomain HOST"
+        template: "IP HOST.DOMAIN HOST"
         params:
           IP: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, BlockStorageHostnameResolveNetwork]}]}
+          DOMAIN: {get_param: CloudDomain}
           HOST: {get_attr: [BlockStorage, name]}
   nova_server_resource:
     description: Heat resource handle for the block storage server
