Introduce domain configuration through parameter
Introduce configuration of the nodes' domains through a parameter.

Change-Id: Ie012f9f2a402b0333bebecb5b59565c26a654297
(cherry picked from commit 9b43153f9822a38b4f6e29febd14d894e91425b2)
Conflicts:
	puppet/ceph-storage.yaml
	puppet/cinder-storage.yaml
	puppet/compute.yaml
	puppet/swift-storage.yaml

--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -283,6 +283,12 @@ parameters:
     description: The user password for SNMPd with readonly rights running on all Overcloud nodes
     type: string
     hidden: true
+  CloudDomain:
+    default: 'localdomain'
+    type: string
+    description: >
+      The DNS domain used for the hosts. This should match the dhcp_domain
+      configured in the Undercloud neutron. Defaults to localdomain.
 
   # Controller-specific params
   AdminToken:
@@ -813,6 +819,7 @@ resources:
           CinderEnableIscsiBackend: {get_param: CinderEnableIscsiBackend}
           CinderEnableRbdBackend: {get_param: CinderEnableRbdBackend}
           CloudName: {get_param: CloudName}
+          CloudDomain: {get_param: CloudDomain}
           ControlVirtualInterface: {get_param: ControlVirtualInterface}
           ControllerExtraConfig: {get_param: controllerExtraConfig}
           Debug: {get_param: Debug}
@@ -990,6 +997,7 @@ resources:
               template: {get_param: ComputeHostnameFormat}
               params:
                 '%stackname%': {get_param: 'OS::stack_name'}
+          CloudDomain: {get_param: CloudDomain}
 
   BlockStorage:
     type: OS::Heat::ResourceGroup
@@ -1027,6 +1035,7 @@ resources:
           MysqlVirtualIP: {get_attr: [VipMap, net_ip_map, {get_param: [ServiceNetMap, MysqlNetwork]}]}
           ExtraConfig: {get_param: ExtraConfig}
           BlockStorageExtraConfig: {get_param: BlockStorageExtraConfig}
+          CloudDomain: {get_param: CloudDomain}
 
   ObjectStorage:
     type: OS::Heat::ResourceGroup
@@ -1055,6 +1064,7 @@ resources:
                 '%stackname%': {get_param: 'OS::stack_name'}
           ExtraConfig: {get_param: ExtraConfig}
           ObjectStorageExtraConfig: {get_param: ObjectStorageExtraConfig}
+          CloudDomain: {get_param: CloudDomain}
 
   CephStorage:
     type: OS::Heat::ResourceGroup
@@ -1078,6 +1088,7 @@ resources:
                 '%stackname%': {get_param: 'OS::stack_name'}
           ExtraConfig: {get_param: ExtraConfig}
           CephStorageExtraConfig: {get_param: CephStorageExtraConfig}
+          CloudDomain: {get_param: CloudDomain}
 
   ControllerIpListMap:
     type: OS::TripleO::Network::Ports::NetIpListMap
