--- a/puppet/cinder-storage.yaml
+++ b/puppet/cinder-storage.yaml
@@ -115,6 +115,12 @@ parameters:
     type: string
     constraints:
     - allowed_values: [POLL_SERVER_CFN, POLL_SERVER_HEAT, POLL_TEMP_URL, ZAQAR_MESSAGE]
+  CloudDomain:
+    default: ''
+    type: string
+    description: >
+      The DNS domain used for the hosts. This should match the dhcp_domain
+      configured in the Undercloud neutron. Defaults to localdomain.
 
 
 resources:
@@ -292,9 +298,10 @@ outputs:
   hosts_entry:
     value:
       str_replace:
-        template: "IP HOST.localdomain HOST"
+        template: "IP HOST.DOMAIN HOST"
         params:
           IP: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, BlockStorageHostnameResolveNetwork]}]}
+          DOMAIN: {get_param: CloudDomain}
           HOST: {get_attr: [BlockStorage, name]}
   nova_server_resource:
     description: Heat resource handle for the block storage server
