--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -594,6 +594,12 @@ parameters:
   NodeIndex:
     type: number
     default: 0
+  CloudDomain:
+    default: ''
+    type: string
+    description: >
+      The DNS domain used for the hosts. This should match the dhcp_domain
+      configured in the Undercloud neutron. Defaults to localdomain.
 
   SoftwareConfigTransport:
     default: POLL_SERVER_CFN
@@ -1361,9 +1367,10 @@ outputs:
       Server's IP address and hostname in the /etc/hosts format
     value:
       str_replace:
-        template: IP HOST.localdomain HOST CLOUDNAME
+        template: IP HOST.DOMAIN HOST CLOUDNAME
         params:
           IP: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, ControllerHostnameResolveNetwork]}]}
+          DOMAIN: {get_param: CloudDomain}
           HOST: {get_attr: [Controller, name]}
           CLOUDNAME: {get_param: CloudName}
   nova_server_resource:
