--- a/puppet/swift-storage.yaml
+++ b/puppet/swift-storage.yaml
@@ -85,6 +85,12 @@ parameters:
     type: string
     constraints:
     - allowed_values: [POLL_SERVER_CFN, POLL_SERVER_HEAT, POLL_TEMP_URL, ZAQAR_MESSAGE]
+  CloudDomain:
+    default: ''
+    type: string
+    description: >
+      The DNS domain used for the hosts. This should match the dhcp_domain
+      configured in the Undercloud neutron. Defaults to localdomain.
 
 
 resources:
@@ -253,9 +259,10 @@ outputs:
   hosts_entry:
     value:
       str_replace:
-        template: "IP HOST.localdomain HOST"
+        template: "IP HOST.DOMAIN HOST"
         params:
           IP: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, ObjectStorageHostnameResolveNetwork]}]}
+          DOMAIN: {get_param: CloudDomain}
           HOST: {get_attr: [SwiftStorage, name]}
   nova_server_resource:
     description: Heat resource handle for the swift storage server
