compute/ceilometer: use internalURL for os endpoint type
To let ceilometer access to keystone endpoints, use internalURL instead of
publicURL for security & performances reasons.

Change-Id: I6677f40038d6adf36b4f0375484b6ef2e16869e3

--- a/puppet/hieradata/compute.yaml
+++ b/puppet/hieradata/compute.yaml
@@ -16,5 +16,6 @@ nova::compute::rbd::libvirt_images_rbd_pool: 'vms'
 nova::compute::rbd::libvirt_rbd_secret_uuid: "%{hiera('ceph::profile::params::fsid')}"
 
 ceilometer::agent::auth::auth_tenant_name: 'service'
+ceilometer::agent::auth::auth_endpoint_type: 'internalURL'
 
 compute_classes: []
