Inject TLS certificate and keys for the Overcloud
This is a first implementation of adding TLS termination to the load
balancer in the controllers. The implementation was made so that the
appropriate certificate/private key in PEM format is copied to the
appropriate controller(s) via a software deployment resource.

And the path is then referenced on the HAProxy configuration, but this
part was left commented out because we need to be able to configure the
keystone endpoints in order for this to work properly.

Conflict:
    puppet/controller.yaml

(Conflict due to not backporting I0e86318eb5521e540cc567ce9d77e1060086d48b )

Change-Id: I0ba8e38d75a0c628d8132a66dc25a30fc5183c79
(cherry picked from commit 97b12afbadeadac0be348b7cc263b090f6e6f0b8)

--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -476,20 +476,6 @@ parameters:
         Specifies the interface where the public-facing virtual ip will be assigned.
         This should be int_public when a VLAN is being used.
     type: string
-  SSLCertificate:
-    default: ''
-    description: If set, the contents of an SSL certificate .crt file for encrypting SSL endpoints.
-    type: string
-    hidden: true
-  SSLKey:
-    default: ''
-    description: If set, the contents of an SSL certificate .key file for encrypting SSL endpoints.
-    type: string
-    hidden: true
-  SSLCACertificate:
-    default: ''
-    description: If set, the contents of an SSL certificate authority file.
-    type: string
   SwiftHashSuffix:
     default: unset
     description: A random string to be used as a salt when hashing to determine mappings in the ring.
@@ -857,9 +843,6 @@ resources:
           SnmpdReadonlyUserName: {get_param: SnmpdReadonlyUserName}
           SnmpdReadonlyUserPassword: {get_param: SnmpdReadonlyUserPassword}
           RedisVirtualIP: {get_attr: [RedisVirtualIP, ip_address]}
-          SSLCertificate: {get_param: SSLCertificate}
-          SSLKey: {get_param: SSLKey}
-          SSLCACertificate: {get_param: SSLCACertificate}
           SwiftHashSuffix: {get_param: SwiftHashSuffix}
           SwiftMountCheck: {get_param: SwiftMountCheck}
           SwiftMinPartHours: {get_param: SwiftMinPartHours}
@@ -887,6 +870,7 @@ resources:
               template: {get_param: ControllerHostnameFormat}
               params:
                 '%stackname%': {get_param: 'OS::stack_name'}
+          NodeIndex: '%index%'
 
   Compute:
     type: OS::Heat::ResourceGroup
